--- a/ProjektLab/Prime.xaml
+++ b/ProjektLab/Prime.xaml
@@ -36,7 +36,7 @@
             </TextBox.Text>
             <Validation.ErrorTemplate>
                 <ControlTemplate>
-                    <StackPanel>
+                    <StackPanel >
                         <TextBlock Text="{Binding [0].ErrorContent}" Foreground="Red"/>
                         <!-- Placeholder for the TextBox itself -->
                         <AdornedElementPlaceholder x:Name="textBox"/>
@@ -65,17 +65,82 @@
                     <ColumnDefinition Width="200"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <Label Grid.Row="0" Grid.Column="0" Content="Erastothenes teszt:"/>
-                <Label Name="Erastothenes" Grid.Row="0" Grid.Column="1"/>
-                <Label Grid.Row="1" Grid.Column="0" Content="Fermat teszt:"/>
-                <Label Name="Fermat" Grid.Row="1" Grid.Column="1"/>
-                <Label Grid.Row="2" Grid.Column="0" Content="Solovay-Strassen teszt:"/>
-                <Label Name="SolovayStrassen" Grid.Row="2" Grid.Column="1"/>
-                <Label Grid.Row="3" Grid.Column="0" Content="Miller-Rabin teszt:"/>
-                <Label Name="MillerRabin" Grid.Row="3" Grid.Column="1"/>
+                <Label Grid.Row="0" Grid.Column="0">
+                    <TextBlock>
+                        Erastothenes teszt
+                        <fa:FontAwesome Icon="InfoCircle">
+                            <fa:FontAwesome.ToolTip>
+                                Leírás
+                            </fa:FontAwesome.ToolTip>
+                        </fa:FontAwesome>
+                        :
+                    </TextBlock>
+                </Label>
+                <Label Name="Erastothenes" Grid.Row="0" Grid.Column="1">
+                    <StackPanel Orientation="Horizontal">
+                        <fa:FontAwesome Icon="Spinner" Spin="True" Name="ErastothenesSpinner" Visibility="Hidden"/>
+                        <TextBlock Name="ErastothenesResult" Visibility="Hidden"></TextBlock>
+                    </StackPanel>
+                </Label>
+                <Label Grid.Row="1" Grid.Column="0">
+                    <TextBlock>
+                        Fermat teszt
+                        <fa:FontAwesome Icon="InfoCircle">
+                            <fa:FontAwesome.ToolTip>
+                                Leírás
+                            </fa:FontAwesome.ToolTip>
+                        </fa:FontAwesome>
+                        :
+                    </TextBlock>
+                </Label>
+                <Label Name="Fermat" Grid.Row="1" Grid.Column="1">
+                    <StackPanel Orientation="Horizontal">
+                        <fa:FontAwesome Icon="Spinner" Spin="True" Name="FermatSpinner" Visibility="Hidden"/>
+                        <TextBlock Name="FermatResult" Visibility="Hidden"></TextBlock>
+                    </StackPanel>
+                </Label>
+                <Label Grid.Row="2" Grid.Column="0">
+                    <TextBlock>
+                        Solovay-Strassen teszt
+                        <fa:FontAwesome Icon="InfoCircle">
+                            <fa:FontAwesome.ToolTip>
+                                Leírás
+                            </fa:FontAwesome.ToolTip>
+                        </fa:FontAwesome>
+                        :
+                    </TextBlock>
+                </Label>
+                <Label Name="SolovayStrassen" Grid.Row="2" Grid.Column="1">
+                    <StackPanel Orientation="Horizontal">
+                        <fa:FontAwesome Icon="Spinner" Spin="True" Name="SolovayStrassenSpinner" Visibility="Hidden"/>
+                        <TextBlock Name="SolovayStrassenResult" Visibility="Hidden"></TextBlock>
+                    </StackPanel>
+                </Label>
+                <Label Grid.Row="3" Grid.Column="0">
+                    <TextBlock>
+                        Miller-Rabin teszt
+                        <fa:FontAwesome Icon="InfoCircle">
+                            <fa:FontAwesome.ToolTip>
+                                Leírás
+                            </fa:FontAwesome.ToolTip>
+                        </fa:FontAwesome>
+                        :
+                    </TextBlock>
+                </Label>
+                <Label Name="MillerRabin" Grid.Row="3" Grid.Column="1">
+                    <StackPanel Orientation="Horizontal">
+                        <fa:FontAwesome Icon="Spinner" Spin="True" Name="MillerRabinSpinner" Visibility="Hidden"/>
+                        <TextBlock Name="MillerRabinResult" Visibility="Hidden"></TextBlock>
+                    </StackPanel>
+                </Label>
                 <Separator Grid.Row="4" Grid.ColumnSpan="2" Grid.Column="0" Width="Auto"/>
                 <Label Grid.Row="5" Grid.Column="0" Content="Prímtényezős felbontás:"/>
-                <Label Name="FactorsResult" Grid.Row="5" Grid.Column="1"/>
+                <Label Name="Factors" Grid.Row="5" Grid.Column="1">
+                    <StackPanel Orientation="Horizontal">
+                        <fa:FontAwesome Icon="Spinner" Spin="True" Name="FactorsSpinner" Visibility="Hidden"/>
+                        <Label Name="FactorsResult" Visibility="Hidden"></Label>
+                    </StackPanel>
+                </Label>
             </Grid>
         </StackPanel>
     </Grid>
