PrimePower added to Prime tab, Polinom tab started

--- a/ProjektLab/MainWindow.xaml
+++ b/ProjektLab/MainWindow.xaml
@@ -11,7 +11,8 @@
             <TabItem Header="Prímszámok">
                 <local:Prime></local:Prime>
             </TabItem>
-            <TabItem Header="TabItem">
+            <TabItem Header="Polinom">
+                <local:Polinom></local:Polinom>
             </TabItem>
         </TabControl>
 
