--- a/ProjektLab/Polinom.xaml
+++ b/ProjektLab/Polinom.xaml
@@ -2,16 +2,18 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:ProjektLab"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Height="auto" Background="White" >
+             d:DesignHeight="450" d:DesignWidth="800" Background="White">
     <Grid HorizontalAlignment="Left" VerticalAlignment="Top" Width="800">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition Width="409*"></ColumnDefinition>
+            <ColumnDefinition Width="84*"></ColumnDefinition>
+            <ColumnDefinition Width="75*"></ColumnDefinition>
+            <ColumnDefinition Width="81*"></ColumnDefinition>
+            <ColumnDefinition Width="71*"></ColumnDefinition>
+            <ColumnDefinition Width="80*"></ColumnDefinition>
 
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -25,37 +27,51 @@
             <RowDefinition Height="auto"></RowDefinition>
         </Grid.RowDefinitions>
         <TextBlock Text="Adjon meg egy Polinomot" FontWeight="Bold" Foreground="Black" Background="White"
-                   Grid.ColumnSpan="2"
                    Grid.Row="0"
                    />
-        
-        
-        
-        
-
-        <Separator Grid.Row="1"></Separator>
+        <TextBlock Name="tbkPolinom" Grid.Column="1" Grid.ColumnSpan="5"></TextBlock>
+        <Separator Grid.Row="1" Grid.ColumnSpan="6"></Separator>
         <TextBlock Text="Vizsgálandó polinom" Grid.Row="2"></TextBlock>
-        <Button Content="CE" Grid.Column="1" Grid.Row="3"></Button>
-        <Button Content="C" Grid.Column="2" Grid.Row="3"></Button>
-        <Button Content="BKSP" Grid.Column="3" Grid.Row="3"></Button>
-        <Button Content="/" Grid.Column="4" Grid.Row="3"></Button>
-        <Button Content="9" Grid.Column="1" Grid.Row="4" Name="btn_9"></Button>
-        <Button Content="8" Grid.Column="2" Grid.Row="4" Name="btn_8"></Button>
-        <Button Content="7" Grid.Column="3" Grid.Row="4" Name="btn_7"></Button>
-        <Button Content="*" Grid.Column="4" Grid.Row="4"></Button>
-        <Button Content="6" Grid.Column="1" Grid.Row="5"></Button>
-        <Button Content="5" Grid.Column="2" Grid.Row="5"></Button>
-        <Button Content="4" Grid.Column="3" Grid.Row="5"></Button>
-        <Button Content="-" Grid.Column="4" Grid.Row="5"></Button>
-        <Button Content="3" Grid.Column="1" Grid.Row="6"></Button>
-        <Button Content="2" Grid.Column="2" Grid.Row="6"></Button>
-        <Button Content="1" Grid.Column="3" Grid.Row="6"></Button>
-        <Button Content="+" Grid.Column="4" Grid.Row="6"></Button>
-        <Button Content="+/-" Grid.Column="1" Grid.Row="7"></Button>
-        <Button Content="0" Grid.Column="2" Grid.Row="7"></Button>
-        <Button Content="," Grid.Column="3" Grid.Row="7"></Button>
-        <Button Content="=" Grid.Column="4" Grid.Row="7"></Button>
+        <Button Content="CE" Grid.Column="2" Grid.Row="3"></Button>
+        <Button Content="C" Grid.Column="3" Grid.Row="3"></Button>
+        <Button Content="BKSP" Grid.Column="4" Grid.Row="3"></Button>
+        <Button Content="/" Grid.Column="5" Grid.Row="3"></Button>
+        <Button Grid.Column="1" Grid.Row="4">
+            <TextBlock FontFamily="Palatino Linotype">
+        <Run>x</Run>
+        <Run Typography.Variants="Superscript">2</Run>
+            </TextBlock>
+        </Button>
+        <Button Content="9" Grid.Column="2" Grid.Row="4" Name="btn_9"></Button>
+        <Button Content="8" Grid.Column="3" Grid.Row="4" Name="btn_8"></Button>
+        <Button Content="7" Grid.Column="4" Grid.Row="4" Name="btn_7"></Button>
+        <Button Content="*" Grid.Column="5" Grid.Row="4"></Button>
+        <Button Grid.Column="1" Grid.Row="5">
+            <TextBlock FontFamily="Palatino Linotype">
+            <Run>x</Run>
+            <Run Typography.Variants="Superscript">3</Run>
+            </TextBlock>
+        </Button>
+        <Button Content="6" Grid.Column="2" Grid.Row="5"></Button>
+        <Button Content="5" Grid.Column="3" Grid.Row="5"></Button>
+        <Button Content="4" Grid.Column="4" Grid.Row="5"></Button>
+        <Button Content="-" Grid.Column="5" Grid.Row="5"></Button>
+        <Button Grid.Column="1" Grid.Row="6">
+            <TextBlock FontFamily="Palatino Linotype">
+            <Run>x</Run>
+            <Run Typography.Variants="Superscript">y</Run>
+            </TextBlock>
+        </Button>
+        <Button Content="3" Grid.Column="2" Grid.Row="6"></Button>
+        <Button Content="2" Grid.Column="3" Grid.Row="6"></Button>
+        <Button Content="1" Grid.Column="4" Grid.Row="6"></Button>
+        <Button Content="+" Grid.Column="5" Grid.Row="6"></Button>
+        <Button Content="+/-" Grid.Column="2" Grid.Row="7"></Button>
+        <Button Content="0" Grid.Column="3" Grid.Row="7"></Button>
+        <Button Content="," Grid.Column="4" Grid.Row="7"></Button>
+        <Button Content="=" Grid.Column="5" Grid.Row="7"></Button>
+        
+       
+
     </Grid>
-
-
 </UserControl>
