--- a/ProjektLab/Polinom.xaml
+++ b/ProjektLab/Polinom.xaml
@@ -42,9 +42,9 @@
         <Run Typography.Variants="Superscript">2</Run>
             </TextBlock>
         </Button>
-        <Button Content="9" Grid.Column="2" Grid.Row="4" Name="btn_9"></Button>
-        <Button Content="8" Grid.Column="3" Grid.Row="4" Name="btn_8"></Button>
-        <Button Content="7" Grid.Column="4" Grid.Row="4" Name="btn_7"></Button>
+        <Button Content="9" Grid.Column="2" Grid.Row="4" Name="btn_9" Click="btn_Click"></Button>
+        <Button Content="8" Grid.Column="3" Grid.Row="4" Name="btn_8" Click="btn_Click"></Button>
+        <Button Content="7" Grid.Column="4" Grid.Row="4" Name="btn_7" Click="btn_Click"></Button>
         <Button Content="*" Grid.Column="5" Grid.Row="4"></Button>
         <Button Grid.Column="1" Grid.Row="5">
             <TextBlock FontFamily="Palatino Linotype">
@@ -52,26 +52,26 @@
             <Run Typography.Variants="Superscript">3</Run>
             </TextBlock>
         </Button>
-        <Button Content="6" Grid.Column="2" Grid.Row="5"></Button>
-        <Button Content="5" Grid.Column="3" Grid.Row="5"></Button>
-        <Button Content="4" Grid.Column="4" Grid.Row="5"></Button>
+        <Button Content="6" Grid.Column="2" Grid.Row="5" Click="btn_Click"></Button>
+        <Button Content="5" Grid.Column="3" Grid.Row="5" Click="btn_Click"></Button>
+        <Button Content="4" Grid.Column="4" Grid.Row="5" Click="btn_Click"></Button>
         <Button Content="-" Grid.Column="5" Grid.Row="5"></Button>
-        <Button Grid.Column="1" Grid.Row="6">
+        <Button Grid.Column="1" Grid.Row="6" Click="Button_Click">
             <TextBlock FontFamily="Palatino Linotype">
             <Run>x</Run>
             <Run Typography.Variants="Superscript">y</Run>
             </TextBlock>
         </Button>
-        <Button Content="3" Grid.Column="2" Grid.Row="6"></Button>
-        <Button Content="2" Grid.Column="3" Grid.Row="6"></Button>
-        <Button Content="1" Grid.Column="4" Grid.Row="6"></Button>
+        <Button Content="3" Grid.Column="2" Grid.Row="6" Click="btn_Click"></Button>
+        <Button Content="2" Grid.Column="3" Grid.Row="6" Click="btn_Click"></Button>
+        <Button Content="1" Grid.Column="4" Grid.Row="6" Click="btn_Click"></Button>
         <Button Content="+" Grid.Column="5" Grid.Row="6"></Button>
         <Button Content="+/-" Grid.Column="2" Grid.Row="7"></Button>
-        <Button Content="0" Grid.Column="3" Grid.Row="7"></Button>
+        <Button Content="0" Grid.Column="3" Grid.Row="7" Click="btn_Click"></Button>
         <Button Content="," Grid.Column="4" Grid.Row="7"></Button>
         <Button Content="=" Grid.Column="5" Grid.Row="7"></Button>
-        
-       
+
+
 
     </Grid>
 </UserControl>
