--- a/ProjektLab/Polinom.xaml
+++ b/ProjektLab/Polinom.xaml
@@ -32,15 +32,13 @@
         <TextBlock Name="tbkPolinom" Grid.Column="1" Grid.ColumnSpan="5"></TextBlock>
         <Separator Grid.Row="1" Grid.ColumnSpan="6"></Separator>
         <TextBlock Text="Vizsgálandó polinom" Grid.Row="2"></TextBlock>
+        <Button Content="Polinom" Grid.Column="1" Grid.Row="3" Name="btnPol" Click="btnPol_Click"></Button>
         <Button Content="CE" Grid.Column="2" Grid.Row="3"></Button>
         <Button Content="C" Grid.Column="3" Grid.Row="3"></Button>
         <Button Content="BKSP" Grid.Column="4" Grid.Row="3"></Button>
         <Button Content="/" Grid.Column="5" Grid.Row="3"></Button>
-        <Button Grid.Column="1" Grid.Row="4">
-            <TextBlock FontFamily="Palatino Linotype">
-        <Run>x</Run>
-        <Run Typography.Variants="Superscript">2</Run>
-            </TextBlock>
+        <Button Content="x" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" Width="84" Click="Button_Click_1">
+         
         </Button>
         <Button Content="9" Grid.Column="2" Grid.Row="4" Name="btn_9" Click="btn_Click"></Button>
         <Button Content="8" Grid.Column="3" Grid.Row="4" Name="btn_8" Click="btn_Click"></Button>
@@ -49,23 +47,31 @@
         <Button Grid.Column="1" Grid.Row="5">
             <TextBlock FontFamily="Palatino Linotype">
             <Run>x</Run>
-            <Run Typography.Variants="Superscript">3</Run>
+            <Run Typography.Variants="Superscript">2</Run>
             </TextBlock>
         </Button>
         <Button Content="6" Grid.Column="2" Grid.Row="5" Click="btn_Click"></Button>
         <Button Content="5" Grid.Column="3" Grid.Row="5" Click="btn_Click"></Button>
         <Button Content="4" Grid.Column="4" Grid.Row="5" Click="btn_Click"></Button>
         <Button Content="-" Grid.Column="5" Grid.Row="5"></Button>
-        <Button Grid.Column="1" Grid.Row="6" Click="Button_Click">
+
+        <Button Grid.Column="1" Grid.Row="6">
             <TextBlock FontFamily="Palatino Linotype">
             <Run>x</Run>
-            <Run Typography.Variants="Superscript">y</Run>
+            <Run Typography.Variants="Superscript">3</Run>
             </TextBlock>
         </Button>
         <Button Content="3" Grid.Column="2" Grid.Row="6" Click="btn_Click"></Button>
         <Button Content="2" Grid.Column="3" Grid.Row="6" Click="btn_Click"></Button>
         <Button Content="1" Grid.Column="4" Grid.Row="6" Click="btn_Click"></Button>
         <Button Content="+" Grid.Column="5" Grid.Row="6"></Button>
+
+        <Button Grid.Column="1" Grid.Row="7" Click="Button_Click">
+            <TextBlock FontFamily="Palatino Linotype">
+            <Run>x</Run>
+            <Run Typography.Variants="Superscript">y</Run>
+            </TextBlock>
+        </Button>
         <Button Content="+/-" Grid.Column="2" Grid.Row="7"></Button>
         <Button Content="0" Grid.Column="3" Grid.Row="7" Click="btn_Click"></Button>
         <Button Content="," Grid.Column="4" Grid.Row="7"></Button>
