--- a/ProjektLab/Polinom.xaml
+++ b/ProjektLab/Polinom.xaml
@@ -37,14 +37,14 @@
         <Button Content="C" Grid.Column="3" Grid.Row="3"></Button>
         <Button Content="BKSP" Grid.Column="4" Grid.Row="3"></Button>
         <Button Content="/" Grid.Column="5" Grid.Row="3"></Button>
-        <Button Content="x" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" Width="84" Click="Button_Click_1">
+        <Button Content="x" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" Width="84" Click="btn_Click">
          
         </Button>
         <Button Content="9" Grid.Column="2" Grid.Row="4" Name="btn_9" Click="btn_Click"></Button>
         <Button Content="8" Grid.Column="3" Grid.Row="4" Name="btn_8" Click="btn_Click"></Button>
         <Button Content="7" Grid.Column="4" Grid.Row="4" Name="btn_7" Click="btn_Click"></Button>
-        <Button Content="*" Grid.Column="5" Grid.Row="4"></Button>
-        <Button Grid.Column="1" Grid.Row="5">
+        <Button Content="*" Grid.Column="5" Grid.Row="4" ></Button>
+        <Button Grid.Column="1" Grid.Row="5" Click="Button_Click_1">
             <TextBlock FontFamily="Palatino Linotype">
             <Run>x</Run>
             <Run Typography.Variants="Superscript">2</Run>
@@ -53,7 +53,7 @@
         <Button Content="6" Grid.Column="2" Grid.Row="5" Click="btn_Click"></Button>
         <Button Content="5" Grid.Column="3" Grid.Row="5" Click="btn_Click"></Button>
         <Button Content="4" Grid.Column="4" Grid.Row="5" Click="btn_Click"></Button>
-        <Button Content="-" Grid.Column="5" Grid.Row="5"></Button>
+        <Button Content="-" Grid.Column="5" Grid.Row="5" Click="btn_Click"></Button>
 
         <Button Grid.Column="1" Grid.Row="6">
             <TextBlock FontFamily="Palatino Linotype">
@@ -64,7 +64,7 @@
         <Button Content="3" Grid.Column="2" Grid.Row="6" Click="btn_Click"></Button>
         <Button Content="2" Grid.Column="3" Grid.Row="6" Click="btn_Click"></Button>
         <Button Content="1" Grid.Column="4" Grid.Row="6" Click="btn_Click"></Button>
-        <Button Content="+" Grid.Column="5" Grid.Row="6"></Button>
+        <Button Content="+" Grid.Column="5" Grid.Row="6" Click="btn_Click"></Button>
 
         <Button Grid.Column="1" Grid.Row="7" Click="Button_Click">
             <TextBlock FontFamily="Palatino Linotype">
