--- a/ProjektLab/Polinom.xaml
+++ b/ProjektLab/Polinom.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ProjektLab"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Background="White">
     <Grid HorizontalAlignment="Left" VerticalAlignment="Top" Width="800">
@@ -29,17 +28,17 @@
         <TextBlock Text="Adjon meg egy Polinomot" FontWeight="Bold" Foreground="Black" Background="White"
                    Grid.Row="0"
                    />
-        <TextBlock Name="tbkPolinom" Grid.Column="1" Grid.ColumnSpan="5"></TextBlock>
+        <TextBlock x:Name="tbkPolinom" Grid.ColumnSpan="5" Margin="289,2,40,3" Grid.RowSpan="2"><Run Text="12x^2+6x+7"/></TextBlock>
         <Separator Grid.Row="1" Grid.ColumnSpan="6"></Separator>
         <TextBlock Text="Vizsgálandó polinom" Grid.Row="2"></TextBlock>
         <TextBlock Name="tbkPol1" Grid.Row="3" Grid.Column="0"></TextBlock>
-            <Button Content="Polinom" Grid.Column="1" Grid.Row="3" Name="btnPol" Click="btnPol_Click"></Button>
+        <Button Content="Polinom" Grid.Column="1" Grid.Row="3" Name="btnPol" Click="btnPol_Click"></Button>
         <Button Content="CE" Grid.Column="2" Grid.Row="3"></Button>
         <Button Content="C" Grid.Column="3" Grid.Row="3"></Button>
         <Button Content="BKSP" Grid.Column="4" Grid.Row="3"></Button>
         <Button Content="/" Grid.Column="5" Grid.Row="3"></Button>
         <Button Content="x" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" Width="84" Click="btn_Click">
-         
+
         </Button>
         <Button Content="9" Grid.Column="2" Grid.Row="4" Name="btn_9" Click="btn_Click"></Button>
         <Button Content="8" Grid.Column="3" Grid.Row="4" Name="btn_8" Click="btn_Click"></Button>
@@ -77,7 +76,7 @@
         <Button Content="+/-" Grid.Column="2" Grid.Row="7"></Button>
         <Button Content="0" Grid.Column="3" Grid.Row="7" Click="btn_Click"></Button>
         <Button Content="," Grid.Column="4" Grid.Row="7"></Button>
-        <Button Content="=" Grid.Column="5" Grid.Row="7"></Button>
+        <Button Content="=" Grid.Column="5" Grid.Row="7" Click="equal_Click"></Button>
 
 
 
