--- a/ProjektLab/Polinom.xaml
+++ b/ProjektLab/Polinom.xaml
@@ -8,75 +8,73 @@
     <Grid HorizontalAlignment="Left" VerticalAlignment="Top" Width="800">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="409*"></ColumnDefinition>
-            <ColumnDefinition Width="84*"></ColumnDefinition>
-            <ColumnDefinition Width="75*"></ColumnDefinition>
-            <ColumnDefinition Width="81*"></ColumnDefinition>
-            <ColumnDefinition Width="71*"></ColumnDefinition>
-            <ColumnDefinition Width="80*"></ColumnDefinition>
+            <ColumnDefinition Width="65*"></ColumnDefinition>
+            <ColumnDefinition Width="65*"></ColumnDefinition>
+            <ColumnDefinition Width="65*"></ColumnDefinition>
+            <ColumnDefinition Width="65*"></ColumnDefinition>
+            <ColumnDefinition Width="65*"></ColumnDefinition>
 
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto" MinHeight="65"></RowDefinition>
+            <RowDefinition Height="auto" MinHeight="65"></RowDefinition>
+            <RowDefinition Height="auto" MinHeight="65"></RowDefinition>
+            <RowDefinition Height="auto" MinHeight="65"></RowDefinition>
+            <RowDefinition Height="auto" MinHeight="65"></RowDefinition>
         </Grid.RowDefinitions>
         <TextBlock Text="Adjon meg egy Polinomot" FontWeight="Bold" Foreground="Black" Background="White"
                    Grid.Row="0"
                    />
-        <TextBlock x:Name="tbkPolinom" Grid.ColumnSpan="5" Margin="289,2,40,3" Grid.RowSpan="2"/>
+        <TextBlock x:Name="tbkPolinom" Grid.ColumnSpan="5" Grid.Column="1"/>
         <Separator Grid.Row="1" Grid.ColumnSpan="6"></Separator>
         <TextBlock Text="Vizsgálandó polinom" Grid.Row="2"></TextBlock>
         <TextBlock Name="tbkPol1" Grid.Row="3" Grid.Column="0"></TextBlock>
-        <Button Content="Polinom" Grid.Column="1" Grid.Row="3" Name="btnPol" Click="btnPol_Click"></Button>
-        <Button Content="CE" Grid.Column="2" Grid.Row="3"></Button>
-        <Button Content="C" Grid.Column="3" Grid.Row="3"></Button>
-        <Button Content="BKSP" Grid.Column="4" Grid.Row="3"></Button>
-        <Button Content="/" Grid.Column="5" Grid.Row="3"></Button>
-        <Button Content="x" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" Width="84" Click="btn_Click">
-
-        </Button>
-        <Button Content="9" Grid.Column="2" Grid.Row="4" Name="btn_9" Click="btn_Click"></Button>
-        <Button Content="8" Grid.Column="3" Grid.Row="4" Name="btn_8" Click="btn_Click"></Button>
-        <Button Content="7" Grid.Column="4" Grid.Row="4" Name="btn_7" Click="btn_Click"></Button>
-        <Button Content="*" Grid.Column="5" Grid.Row="4" ></Button>
+        <Button Content="Z[x]" Grid.Column="1" Grid.Row="3" Name="btnPol" Click="btnPol_Click" FontFamily="Times New Roman" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="CE" Grid.Column="2" Grid.Row="3" FontFamily="Times New Roman" FontSize="22"></Button>
+        <Button Content="C" Grid.Column="3" Grid.Row="3" FontFamily="Times New Roman" FontSize="22"></Button>
+        <Button Content="BKSP" Grid.Column="4" Grid.Row="3" FontFamily="Times New Roman" FontSize="22"></Button>
+        <Button Content="/" Grid.Column="5" Grid.Row="3" FontFamily="Times New Roman" FontSize="22"></Button>
+        <Button Content="x" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" Width="76" Click="btn_Click" FontFamily="Palatino Linotype" FontStyle="Italic" FontSize="22"/>
+        <Button Content="9" Grid.Column="2" Grid.Row="4" Name="btn_9" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="8" Grid.Column="3" Grid.Row="4" Name="btn_8" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="7" Grid.Column="4" Grid.Row="4" Name="btn_7" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22"></Button>
+        <Button Content="*" Grid.Column="5" Grid.Row="4" FontFamily="Palatino Linotype" FontSize="22" ></Button>
         <TextBlock Name="tbkOperation" Grid.Column="0" Grid.Row="5" />
         <Button Grid.Column="1" Grid.Row="5" Click="Button_Click_1">
-            <TextBlock FontFamily="Palatino Linotype">
+            <TextBlock FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic">
             <Run>x</Run>
             <Run Typography.Variants="Superscript">2</Run>
             </TextBlock>
         </Button>
-        <Button Content="6" Grid.Column="2" Grid.Row="5" Click="btn_Click"></Button>
-        <Button Content="5" Grid.Column="3" Grid.Row="5" Click="btn_Click"></Button>
-        <Button Content="4" Grid.Column="4" Grid.Row="5" Click="btn_Click"></Button>
-        <Button Content="-" Grid.Column="5" Grid.Row="5" Click="btn_Click"></Button>
+        <Button Content="6" Grid.Column="2" Grid.Row="5" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="5" Grid.Column="3" Grid.Row="5" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="4" Grid.Column="4" Grid.Row="5" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="-" Grid.Column="5" Grid.Row="5" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
 
-        <Button Grid.Column="1" Grid.Row="6">
+        <Button Grid.Column="1" Grid.Row="6" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic">
             <TextBlock FontFamily="Palatino Linotype">
             <Run>x</Run>
             <Run Typography.Variants="Superscript">3</Run>
             </TextBlock>
         </Button>
-        <Button Content="3" Grid.Column="2" Grid.Row="6" Click="btn_Click"></Button>
-        <Button Content="2" Grid.Column="3" Grid.Row="6" Click="btn_Click"></Button>
-        <Button Content="1" Grid.Column="4" Grid.Row="6" Click="btn_Click"></Button>
-        <Button Content="+" Grid.Column="5" Grid.Row="6" Click="btn_Click"></Button>
+        <Button Content="3" Grid.Column="2" Grid.Row="6" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="2" Grid.Column="3" Grid.Row="6" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="1" Grid.Column="4" Grid.Row="6" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="+" Grid.Column="5" Grid.Row="6" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"/>
 
-        <Button Grid.Column="1" Grid.Row="7" Click="Button_Click">
+        <Button Grid.Column="1" Grid.Row="7" Click="Button_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic">
             <TextBlock FontFamily="Palatino Linotype">
             <Run>x</Run>
             <Run Typography.Variants="Superscript">y</Run>
             </TextBlock>
         </Button>
-        <Button Content="+/-" Grid.Column="2" Grid.Row="7"></Button>
-        <Button Content="0" Grid.Column="3" Grid.Row="7" Click="btn_Click"></Button>
-        <Button Content="," Grid.Column="4" Grid.Row="7"></Button>
-        <Button Content="=" Grid.Column="5" Grid.Row="7" Click="equal_Click"></Button>
+        <Button Content="+/-" Grid.Column="2" Grid.Row="7" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="0" Grid.Column="3" Grid.Row="7" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="," Grid.Column="4" Grid.Row="7" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
+        <Button Content="=" Grid.Column="5" Grid.Row="7" Click="equal_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
 
 
 
