--- a/ProjektLab/Polinom.xaml
+++ b/ProjektLab/Polinom.xaml
@@ -5,16 +5,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Background="White">
-    <Grid HorizontalAlignment="Left" VerticalAlignment="Top" Width="800">
+    <Grid HorizontalAlignment="Left" VerticalAlignment="Top" Width="780">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="54*"></ColumnDefinition>
-            <ColumnDefinition Width="320*"></ColumnDefinition>
-            <ColumnDefinition Width="71*"></ColumnDefinition>
-            <ColumnDefinition Width="71*"></ColumnDefinition>
-            <ColumnDefinition Width="71"></ColumnDefinition>
-            <ColumnDefinition Width="71*"></ColumnDefinition>
-            <ColumnDefinition Width="71*"></ColumnDefinition>
-            <ColumnDefinition Width="71*"></ColumnDefinition>
+            <ColumnDefinition Width="54"></ColumnDefinition>
+            <ColumnDefinition Width="330"></ColumnDefinition>
+            <ColumnDefinition Width="65"></ColumnDefinition>
+            <ColumnDefinition Width="65"></ColumnDefinition>
+            <ColumnDefinition Width="65"></ColumnDefinition>
+            <ColumnDefinition Width="65"></ColumnDefinition>
+            <ColumnDefinition Width="65"></ColumnDefinition>
+            <ColumnDefinition Width="65"></ColumnDefinition>
 
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -27,19 +27,22 @@
             <RowDefinition Height="auto" MinHeight="65"></RowDefinition>
             <RowDefinition Height="auto" MinHeight="65"></RowDefinition>
         </Grid.RowDefinitions>
-        <TextBlock Text="Adjon meg egy Polinomot" FontWeight="Bold" Foreground="Black" Background="White"
-                   Grid.Row="0" Grid.ColumnSpan="2"
-                   />
-        <TextBlock x:Name="tbkPolinom" Grid.ColumnSpan="5" Grid.Column="1"/>
-        <Separator Grid.Row="1" Grid.ColumnSpan="7"></Separator>
+        <TextBlock Text="Adjon meg egy Polinomot" FontWeight="Bold" Foreground="Black" Background="White" Grid.Row="0" Grid.ColumnSpan="2"/>
+        <TextBlock x:Name="tbkPolinom" Grid.ColumnSpan="5" Grid.Column="2"/>
+        <Separator Grid.Row="1" Grid.ColumnSpan="8"></Separator>
         <TextBlock Text="Modulo" Grid.Row="2"></TextBlock>
-        <TextBlock Name="tbkPol1" Grid.Row="3" Grid.Column="0"></TextBlock>
+        <TextBlock Name="tbkMod" Grid.Row="2" Grid.Column="1"></TextBlock>
+        <TextBlock Name="tbkPol1" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="5"/>
         <Button Grid.Column="2" Grid.Row="3" Name="btnClipboard" Click="btnclipBoard_Click">
             <StackPanel>
                 <Image Source="clipboard.png"></Image>
             </StackPanel>
         </Button>
-        <Button Content="Z[x]" Grid.Column="3" Grid.Row="3" Name="btnPol" Click="btnPol_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic" FontWeight="Bold" ></Button>
+        <Button Grid.Column="3" Grid.Row="3" Name="btnPol" Click="btnPol_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic" FontWeight="Bold" >
+            <StackPanel>
+                <Image Source="mathop.png"></Image>
+            </StackPanel>
+        </Button>
         <Button Content="CE" Grid.Column="4" Grid.Row="3" FontFamily="Times New Roman" FontSize="22" FontWeight="Bold"></Button>
         <Button Content="C" Grid.Column="5" Grid.Row="3" FontFamily="Times New Roman" FontSize="22"></Button>
         <Button Content="BKSP" Grid.Column="6" Grid.Row="3" FontFamily="Times New Roman" FontSize="22"></Button>
@@ -49,13 +52,13 @@
                 <Image Source="open-archive.png"></Image>
             </StackPanel>
         </Button>
-        <Button Content="x" Grid.Column="3" Grid.Row="4" HorizontalAlignment="Left" Width="71" Click="btn_Click" FontFamily="Palatino Linotype" FontStyle="Italic" FontWeight="Bold" FontSize="22"/>
+        <Button Content="x" Grid.Column="3" Grid.Row="4" HorizontalAlignment="Left" Width="65" Click="btn_Click" FontFamily="Palatino Linotype" FontStyle="Italic" FontWeight="Bold" FontSize="22"/>
         <Button Content="9" Grid.Column="4" Grid.Row="4" Name="btn_9" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
         <Button Content="8" Grid.Column="5" Grid.Row="4" Name="btn_8" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
         <Button Content="7" Grid.Column="6" Grid.Row="4" Name="btn_7" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22"></Button>
         <Button Content="*" Grid.Column="7" Grid.Row="4" FontFamily="Palatino Linotype" FontSize="22" ></Button>
-        <TextBlock Name="tbkOperation" Grid.Column="0" Grid.Row="5" />
-        <Button Content="mod" Grid.Column="2" Grid.Row="5" FontFamily="Palatino Linotype" FontStyle="Italic" FontSize="22" ></Button>
+        <TextBlock Name="tbkOperation" Grid.Column="0" Grid.Row="5"/>
+        <Button Content="mod" Grid.Column="2" Grid.Row="5" FontFamily="Palatino Linotype" FontStyle="Italic" FontSize="22" Click="btnMod_click" ></Button>
         <Button Grid.Column="3" Grid.Row="5" Click="Button_Click_square">
             <TextBlock FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic">
             <Run>x</Run>
