--- a/ProjektLab/Polinom.xaml
+++ b/ProjektLab/Polinom.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Background="White">
+             d:DesignHeight="450" d:DesignWidth="800" Width="Auto" Height="Auto" Background="White">
     <Grid HorizontalAlignment="Left" VerticalAlignment="Top" Width="780">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="54"></ColumnDefinition>
