--- a/ProjektLab/Prime.xaml
+++ b/ProjektLab/Prime.xaml
@@ -7,9 +7,9 @@
              xmlns:fa="http://schemas.fontawesome.io/icons/"
              xmlns:Prime="clr-namespace:Prime;assembly=Prime" x:Class="ProjektLab.Prime"
              mc:Ignorable="d" 
-             d:DesignHeight="392" d:DesignWidth="800" Height="Auto" Background="White"
+             d:DesignHeight="600" d:DesignWidth="800" Width="Auto" Height="Auto" Background="White"
     >
-    <Grid HorizontalAlignment="Left" VerticalAlignment="Top" Width="800">
+    <Grid HorizontalAlignment="Left" VerticalAlignment="Top" Width="Auto">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
             <ColumnDefinition Width="1*"/>
