--- a/ProjektLab/Polinom.xaml
+++ b/ProjektLab/Polinom.xaml
@@ -18,7 +18,7 @@
 
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto" MinHeight="25"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="65"></RowDefinition>
@@ -39,7 +39,7 @@
                 <Image Source="clipboard.png"></Image>
             </StackPanel>
         </Button>
-        <Button Grid.Column="2" Grid.Row="3" Name="btnSave" Click="btnSave_click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic" FontWeight="Bold" ToolTip="Műveletválasztó" >
+        <Button Grid.Column="2" Grid.Row="3" Name="btnSave" Click="btnSave_click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic" FontWeight="Bold" ToolTip="Számolásablak mentése..." >
             <StackPanel>
                 <Image Source="floppy.png"></Image>
             </StackPanel>
@@ -82,7 +82,7 @@
         <Button Content="2" Grid.Column="5" Grid.Row="6" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
         <Button Content="1" Grid.Column="6" Grid.Row="6" Click="btn_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"></Button>
         <Button Content="+" Grid.Column="7" Grid.Row="6" Click="btnFunct_click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic"/>
-        <Button Grid.Column="2" Grid.Row="7" Name="btnEraseLog" Click="btnEraseLog_Click" ToolTip="Polinom szövegfájlból">
+        <Button Grid.Column="2" Grid.Row="7" Name="btnEraseLog" Click="btnEraseLog_Click" ToolTip="Napló törlése">
             <StackPanel>
                 <Image Source="sponge.png"></Image>
             </StackPanel>
