--- a/ProjektLab/Polinom.xaml
+++ b/ProjektLab/Polinom.xaml
@@ -87,7 +87,7 @@
                 <Image Source="sponge.png"></Image>
             </StackPanel>
         </Button>
-        <Button Grid.Column="3" Grid.Row="7" Click="Button_Click" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic">
+        <Button Grid.Column="3" Grid.Row="7" Click="Button_Click_Exponent" FontFamily="Palatino Linotype" FontSize="22" FontStyle="Italic">
             <TextBlock FontFamily="Palatino Linotype">
             <Run>x</Run>
             <Run Typography.Variants="Superscript">y</Run>
